# sematic-desktop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml  query_main.py
.github/workflows/: pytest.yml
.semantic_index/markdown/my_folder/: Premier House Brochure 1.2 (Web).pdf.md  handbook-10.pdf.md
.semantic_index/metadata/my_folder/: Premier House Brochure 1.2 (Web).pdf.json  handbook-10.pdf.json
sematic_desktop/: __init__.py  app.py  embeddings.py  indexer.py  ollama_client.py  routing.py  search.py  summarizer.py
sematic_desktop/data/: __init__.py  stores.py
sematic_desktop/foundation/: __init__.py  conversion.py  lance.py  ollama.py  remote_embeddings.py
sematic_desktop/middleware/: __init__.py  embeddings.py  ollama.py  routing.py  summarizer.py
sematic_desktop/presentation/: __init__.py  index_cli.py  search_cli.py
sematic_desktop/services/: __init__.py  indexing.py  search.py
tests/: test_embeddings.py  test_indexer.py  test_main.py  test_routing.py  test_search.py  test_summarizer.py
