[project]
name = "sematic-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.61.1",
    "markitdown>=0.1.3",
    "tqdm>=4.66.0",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
