[project]
name = "sematic-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.61.1",
    "markitdown>=0.1.3",
    "lancedb>=0.7.8",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["sematic_desktop"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
